# mini-redis

./: Cargo.toml  README.md  data.md
src/: lib.rs  main.rs
src/client/: main.rs  mod.rs  tcp_client.rs
src/protocol/: command.rs  mod.rs  parser.rs
src/server/: connection.rs  mod.rs  tcp_server.rs
src/storage/: memory_store.rs  mod.rs  persistence.rs
