[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "mini-redis-server"
path = "src/main.rs"

[[bin]]
name = "mini-redis-client"
path = "src/client/main.rs"
